@@ -198,8 +198,10 @@ separate Slicers.
 <P>
 The Image - Linked Slicers menu entry will open a complete array of
 linked slicers, one per image file and each one already locked to a time.  The
-slice control toolbar will be detached and moved to the upper left for the
-first window and hidden for the other windows.  The windows will be arranged
+slice control toolbar will be detached and moved to the top or left side for the
+first window and hidden for the other windows.  (It is placed in the middle of
+the top or left to keep it from being lost if there are two side-by-side
+monitors of unequal size.) The windows will be arranged
 in rows and shrunk by up to 50%, if necessary, to fit as many as possible.  If
 the <B>Link</B> box is turned off for a slicer, its toolbar will be restored.
 If the first window is closed or its <B>Link</B> is turned off, another
